# drone-vajraakhasa

./: cara_jalankan.txt  fix_jam.txt  test.csv
rviz2/: display.rviz
src/metric_recorder/: CMakeLists.txt  package.xml
src/metric_recorder/src/: record.cpp
src/offboard_control/: CMakeLists.txt  package.xml
src/offboard_control/include/offboard_control/: drone_kinematics.hpp  forward_backward.hpp  hover_only.hpp  safety_landing.hpp
src/offboard_control/launch/: camera_tf_and_kinematics.launch.py  kinematics.launch.py
src/offboard_control/src/: drone_kinematics.cpp  forward_backward.cpp  gear_service_node.cpp  hover_only.cpp  lqi_hover.cpp  odom_to_base_link.cpp  safety_landing.cpp  zed_odom_to_px4.cpp  zed_vio_to_px4.cpp  zed_vio_to_px4_second.cpp
src/segmentation_node/: CMakeLists.txt  package.xml
src/segmentation_node/clouds/: clustering.pcd  cylinder.pcd  pertama.pcd
src/segmentation_node/include/segmentation_node/: cylinder_crop.hpp  landing_circle.hpp
src/segmentation_node/src/: circle_crop.cpp  cloud_save.cpp  clustering.cpp  cylinder_crop.cpp  landing_circle.cpp  plane_segmentation.cpp  plane_segmentation_gng.cpp  plane_segmentation_ransac.cpp  plane_segmentation_temp.cpp  zed_segmentation.cpp
src/zed_ros2_wrapper/zed_wrapper/config/: common_stereo.yaml  zed2i.yaml
src/zed_ros2_wrapper/zed_wrapper/launch/: zed_camera.launch.py
